# order_execution_module

./: .gitignore  CMakeLists.txt  README.md  dummy_runner.cpp  main.cpp  order_engine.cpp  order_engine.hpp
dummy_data/: burst_sample.txt  multi_symbol_sample.txt  single_tick.txt  tc1_sequential.csv  tc2_simultaneous.csv  tc3_sell_before_fill.csv
